# idea-reality-mcp

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CHANGELOG.zh-TW.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  Dockerfile  LICENSE  README.md  README.zh-TW.md  SECURITY.md  TERMS.md  analyze_queries.py  glama.json  llms.txt  pyproject.toml  query_analysis_report.md  render.yaml  server.json  smithery.yaml
.claude/: instructions.md
.cursor-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: inaccurate-result.yml
.github/workflows/: ci.yml  demand-radar-refresh.yml
.skills/idea-reality/: skill.json  skill.md
api/: db.py  embeddings.py  main.py  paypal_utils.py  report.py  requirements.txt
api/static/: report.html
assets/: gen_cover.py  generate-cover.html
cursor-plugin/: README.md
cursor-plugin/.cursor-plugin/: plugin.json
cursor-plugin/rules/: idea-check.mdc
cursor-plugin/skills/idea-check/: SKILL.md
docs/: 2026-07-06-demand-radar-offline-clustering.md  2026-07-06-demand-sensing-accelerator-master-plan.md  P1-semantic-embeddings.md  v0.3-plan.md  v0.4-comparison.md
docs/superpowers/plans/: 2026-04-04-scoring-accuracy-fix.md
docs/superpowers/specs/: 2026-04-04-scoring-accuracy-fix-design.md
docs/zh/: CHANGELOG.zh-TW.md  README.zh-TW.md  SECURITY.zh-TW.md
drafts/: 10-ideas-api-results.json  10-ideas-scan-results.md  devto-agent-instructions.md  devto-v034.md  reddit-claudeai.md
examples/: agent-instructions.md  claude_desktop_config.json  sample_prompts.md  sample_prompts.zh-TW.md
scripts/: backfill_embeddings.py  backfill_embeddings_http.py  build_demand_topics.py  import_discord_to_turso.py  init_turso.py  turso_http.py
skills/idea-check/: SKILL.md
src/idea_reality_mcp/: __init__.py  __main__.py  cli.py  cta.py  server.py  tools.py
src/idea_reality_mcp/onboarding/: doctor.py  platforms.py  setup_wizard.py  terms.py
src/idea_reality_mcp/scoring/: engine.py  expansion.py  llm.py  synonyms.py
templates/: CLAUDE.md  README.md  copilot-instructions.md  cursorrules.md  windsurf-rules.md
tests/: eval_keywords.py  eval_llm_vs_dict.py  golden_ideas.json  test_api_extract_keywords.py  test_expansion.py  test_github_retry.py  test_keyword_synonyms.py  test_llm.py  test_npm.py  test_pivot_hints_llm.py  test_producthunt.py  test_pypi.py  test_report.py  test_score_history.py  test_scoring.py  test_server_smoke.py  test_sources.py  test_stackoverflow.py  test_subscribe.py  test_temporal.py  test_tw_chinese.py  test_tw_niche.py
(+7 files in other folders)
