[project]
name = "idea-reality-mcp"
version = "0.1.0"
description = "Pre-build reality check for AI coding agents. Stop building what already exists."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Mnemox AI", email = "dev@mnemox.ai" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/mnemox-ai/idea-reality-mcp"
Repository = "https://github.com/mnemox-ai/idea-reality-mcp"
Issues = "https://github.com/mnemox-ai/idea-reality-mcp/issues"

[project.scripts]
idea-reality-mcp = "idea_reality_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
